Fix project list overflow

--- a/resources/sass/_boards.scss
+++ b/resources/sass/_boards.scss
@@ -87,6 +87,11 @@
     z-index: 10;
 }
 
+.list-card-details-no-overflow {
+    overflow: initial;
+    padding: 0.5rem;
+}
+
 .list-card-labels {
     overflow: auto;
     position: relative;
@@ -173,6 +178,23 @@ textarea.description-content {
     box-shadow: none;
 }
 
+.vue-select-up .v-select.open .vs__dropdown-toggle {
+  border-bottom-color: rgba(60,60,60,.26) !important;
+  border-bottom-left-radius: 4px !important;
+  border-bottom-right-radius: 4px !important;
+  border-top-color: transparent;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.vue-select-up .v-select .vs__dropdown-menu {
+  top: auto !important;
+  box-shadow: 0 -3px 6px 0 rgba(0,0,0,.15) !important;
+  border-radius: 4px 4px 0 0 !important;
+  border-top: 1px solid rgba(0,0,0,.26) !important;
+  border-bottom: none !important;
+  bottom: calc(100% - 1px);
+}
 
 .card-label-green {
     @include button-variant($green, darken($green, 7.5%), darken($green, 10%), lighten($green,5%), lighten($green, 10%), darken($green,30%));
